<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/gamePlaylist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:src="@drawable/playlist1" />

            <ImageView
                android:id="@+id/lofiPlaylist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/playlist2" />
        </LinearLayout>

        <TextView
            android:id="@+id/recent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/recent"
            android:textColor="#23291F"
            android:textSize="30sp"
            app:drawableStartCompat="@drawable/time" />

        <TextView
            android:id="@+id/my_music"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/my_music"
            android:textColor="#23291F"
            android:textSize="30sp"
            app:drawableLeftCompat="@drawable/music" />

        <TextView
            android:id="@+id/favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/favorite"
            android:textColor="#23291F"
            android:textSize="30sp"
            app:drawableLeftCompat="@drawable/star" />

    </LinearLayout>

</ScrollView>